[package]
name = "rcli"
authors = ["Tyr Chen <Sonder.QiCat@outlook.com>"]
version = "1.0.0"
edition = "2024"

[dependencies]
#clap = { version = "4.5.45", features = ["derive"] }
#csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
#chrono = "0.4.43"
anyhow = "1.0.100"
serde_json = "1.0.149"
#rustfmt = "0.10.0"
#toml = "0.9.11"
#serde_yaml = "0.9.34"
#rand = "0.6.5"
#base64 = "0.22.1"
#derive_builder = "0.20.2"
bytes = "1.11.1"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.8", features = ["cors"] }
thiserror = "2.0.18"
#tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
#tracing-subscriber = "0.3.23"
#log = "0.4.29"
#axum = "0.8.8"
#tracing = "0.1.44"
