[package]
name = "rcli"
authors = ["Tyr Chen <Sonder.QiCat@outlook.com>"]
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.8", features = ["cors"] }
thiserror = "2.0.18"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.19.0"
chrono = "0.4.44"
